# tapf-regexp

./: README.md  stack.yaml  tapf-regexp.cabal
src/TAPF/: Regexp.hs
test/: Main.hs
