name:                tapf-regexp
version:             0.1.0.0
synopsis:            A simple regexp matcher
homepage:            https://github.com/pbv/tapf-regexp.git
license:             MIT
license-file:        LICENSE
author:              Pedro Vasconcelos
maintainer:          pbv@dcc.fc.up.pt
copyright:           2017 Pedro Vasconcelos
category:            Text
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     TAPF.Regexp
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable regexp-test
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5,
                       tapf-regexp
  default-language:    Haskell2010
          
  
source-repository head
  type:     git
  location: https://github.com/pbv/tapf-regexp.git
